Adicionando o formulario de regiso

--- a/sis-penitenciario/src/app/components/home/home.component.html
+++ b/sis-penitenciario/src/app/components/home/home.component.html
@@ -2,6 +2,96 @@
     <app-header></app-header>
     <div class="row">
         <app-sidebar></app-sidebar>
+        <div class="col-md-9">
+            
+            <div class="row d-flex justify-content-center" style="margin: 0 80px;">
+                <div class="col-md-6">
+                    <div class="block block-drop-shadow">                    
+                        <div class="head bg-dot20">
+                            <h2>Gestão Documental</h2>
+                            <div class="side pull-right">               
+                                <ul class="buttons">                                
+                                    <li><a href="#"><span class="icon-folder-open"></span></a></li>
+                                </ul>
+                            </div>
+                            <div class="head-subtitle">Processos Físicos</div>                        
+                            <div class="head-panel nm tac" style="line-height: 0px;">
+                                <div class="knob">
+                                    <div style="display: block; width: 100px; height: 100px;font-size: 100px;"><i class="icon-folder-open" style="font-size: 60%;"></i></div>
+                                    
+                                </div>                              
+                            </div>
+                                                   
+                        </div>                    
+                        
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="block block-drop-shadow" routerLink="/presidiario">                    
+                        <div class="head bg-dot20">
+                            <h2>Gestão dos Reclusos</h2>
+                            <div class="side pull-right">               
+                                <ul class="buttons">                                
+                                    <li><a href="#"><span class="icon-group"></span></a></li>
+                                </ul>
+                            </div>
+                            <div class="head-subtitle">WD Caviar Blue 1TB</div>                        
+                            <div class="head-panel nm tac" style="line-height: 0px;">
+                                <div class="knob">
+                                    <div style="display: block; width: 100px; height: 100px;font-size: 100px;"><span class="icon-group"></span></div>
+                                </div>                              
+                            </div>
+                                                   
+                        </div>                    
+                        
+                    </div>
+                </div>
+            </div> 
+            
+            <div class="row" style="margin: 0 80px;">
+                <div class="col-md-6">
+                    <div class="block block-drop-shadow">                    
+                        <div class="head bg-dot20">
+                            <h2>Relatórios Informátivos</h2>
+                            <div class="side pull-right">               
+                                <ul class="buttons">                                
+                                    <li><a href="#"><span class="icon-paste"></span></a></li>
+                                </ul>
+                            </div>
+                            <div class="head-subtitle"></div>                        
+                            <div class="head-panel nm tac" style="line-height: 0px;">
+                                <div class="knob">
+                                    <div style="display: block; width: 100px; height: 100px;font-size: 80px;"><span class="icon-paste"></span></div>
+                                </div>                              
+                            </div>
+                                                    
+                        </div>                    
+                        
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="block block-drop-shadow">                    
+                        <div class="head bg-dot20">
+                            <h2>EStatística</h2>
+                            <div class="side pull-right">               
+                                <ul class="buttons">                                
+                                    <li><a href="#"><span class="icon-bar-chart"></span></a></li>
+                                </ul>
+                            </div>
+                            <div class="head-subtitle"></div>                        
+                            <div class="head-panel nm tac" style="line-height: 0px;">
+                                <div class="knob">
+                                    <div style="display: block; width: 100px; height: 100px;font-size: 100px;"><span class="icon-bar-chart"></span></div>
+                                </div>                              
+                            </div>
+                                                    
+                        </div>                    
+                        
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </div>
     
 </div>
