--- a/sis-penitenciario/src/app/components/login/login.component.html
+++ b/sis-penitenciario/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
                 </div>                        
                 <div class="form-row">
                     <div class="col-md-6">
-                        <a href="#" class="btn btn-default btn-block btn-clean">Registar</a>                                
+                        <a href="#" class="btn btn-default btn-block btn-clean" routerLink="/register">Registar</a>                                
                     </div>
                     <div class="col-md-6">
                         <a class="btn btn-default btn-block btn-clean" routerLink="/home">Entrar</a>
