--- a/sis-penitenciario/src/app/components/main-layout/header/header.component.html
+++ b/sis-penitenciario/src/app/components/main-layout/header/header.component.html
@@ -15,7 +15,7 @@
                        <span class="icon-home"></span> Inicio
                    </a>
                </li>                            
-               <li class="dropdown">
+               <!--li class="dropdown">
                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-pencil"></span> forms</a>
                    <ul class="dropdown-menu">                                    
                        <li><a href="form_elements.html">Form elements</a></li>
@@ -23,7 +23,7 @@
                        <li><a href="form_files.html">File handling</a></li>
                        <li><a href="form_validation.html">Validation and wizard</a></li>
                    </ul>                                
-               </li>
+               </li-->
                <li class="dropdown">
                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-cogs"></span> configuracoes</a>
                    <ul class="dropdown-menu">
@@ -59,7 +59,7 @@
                        <li><a href="component_icons.html">Icons</a></li>                                    
                    </ul>
                </li>                          
-               <li><a href="widgets.html"><span class="icon-globe"></span> widgets</a></li>
+               <!--li><a href="widgets.html"><span class="icon-globe"></span> widgets</a></li-->
                <li class="dropdown">
                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-file-alt"></span> Relatórios</a>
                    <ul class="dropdown-menu">
