--- a/sis-penitenciario/src/app/components/main-layout/sidebar/sidebar.component.html
+++ b/sis-penitenciario/src/app/components/main-layout/sidebar/sidebar.component.html
@@ -1,16 +1,16 @@
-<div class="col-md-2">
+<div class="col-md-3">
                 
     <div class="block block-drop-shadow">
         <div class="user bg-default bg-light-rtl">
             <div class="info">                                                                                
-                <a href="#" class="informer informer-three">
+                <!--a href="#" class="informer informer-three">
                     <span>14 / 255</span>
                     Notificacoes
-                </a>                            
-                <a href="#" class="informer informer-four">
+                </a-->                            
+                <!--a href="#" class="informer informer-four">
                     <span>$549.44</span>
                     Balance
-                </a>                                                        
+                </a-->                                                        
                 <img src="assets/img/user.jpg" class="img-circle img-thumbnail">
             </div>
         </div>
@@ -24,16 +24,16 @@
     
     <div class="block block-drop-shadow">
         <div class="head bg-dot20">
-            <h2>CPU</h2>
+            <h2>Presidiários</h2>
             <div class="side pull-right">               
                 <ul class="buttons">                                
                     <li><a href="#"><span class="icon-cogs"></span></a></li>
                 </ul>
             </div>
-            <div class="head-subtitle">Intel Core2 Duo T6670 2.20GHz</div>                                            
+            <!--div class="head-subtitle">Intel Core2 Duo T6670 2.20GHz</div-->                                            
             <div class="head-panel nm">
                 <div class="hp-info hp-simple pull-left hp-inline">
-                    <span class="hp-main">Core 0 <span class="icon-angle-right"></span> 89%</span>
+                    <span class="hp-main">Detencões <span class="icon-angle-right"></span> 69%</span>
                     <div class="hp-sm">                                    
                         <div class="progress progress-small">
                             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100" style="width: 89%"></div>
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="hp-info hp-simple pull-left hp-inline">
-                    <span class="hp-main">Core 1 <span class="icon-angle-right"></span> 56%</span>
+                    <span class="hp-main">Transferencias <span class="icon-angle-right"></span> 36%</span>
                     <div class="hp-sm">                                    
                         <div class="progress progress-small">
                             <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="56" aria-valuemin="0" aria-valuemax="100" style="width: 56%"></div>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-    <div class="block block-drop-shadow">
+    <!--div class="block block-drop-shadow">
         <div class="head bg-dot20">
             <h2>Memory</h2>
             <div class="side pull-right">               
@@ -77,34 +77,6 @@
                 </div>                                                
             </div>                        
         </div>
-    </div>
-    <div class="block block-drop-shadow">                    
-        <div class="head bg-dot20">
-            <h2>Volumes status</h2>
-            <div class="side pull-right">               
-                <ul class="buttons">                                
-                    <li><a href="#"><span class="icon-cogs"></span></a></li>
-                </ul>
-            </div>
-            <div class="head-subtitle">WD Caviar Blue 1TB</div>                        
-            <div class="head-panel nm tac" style="line-height: 0px;">
-                <div class="knob">
-                    <div style="display: block; width: 100px; height: 100px;"><canvas width="125" height="125" style="width: 100px; height: 100px;"></canvas><input type="text" data-fgcolor="#3F97FE" data-min="0" data-max="1024" data-width="100" data-height="100" value="654" data-readonly="true" readonly="readonly" style="width: 50px; height: 33px; position: absolute; vertical-align: middle; top: 50%; left: 50%; margin-top: -16px; margin-left: -25px; border: 0px; background: none; font: bold 16px Arial; text-align: center; color: rgb(63, 151, 254); padding: 0px; appearance: none;"></div>
-                </div>                              
-            </div>
-            <div class="head-panel nm">
-                <div class="hp-info hp-simple pull-left hp-inline">
-                    <span class="hp-main">Volume 1 [ 0.5 TB ]</span>
-                    <span class="hp-sm">Used: 450.0 GB [ 90% ] </span>
-                    <span class="hp-sm">Free: 50.0 GB [ 10% ] </span>
-                </div>                 
-                <div class="hp-info hp-simple pull-left hp-inline">
-                    <span class="hp-main">Volume 2 [ 0.5 TB ]</span>
-                    <span class="hp-sm">Used: 154.0 GB [ 30% ] </span>
-                    <span class="hp-sm">Free: 346.0 GB [ 70% ] </span>
-                </div>                 
-            </div>                        
-        </div>                    
-        
-    </div>                 
+    </div-->
+                     
 </div>
