Adicionando presidiario-view

--- a/sis-penitenciario/src/app/components/home/home.component.html
+++ b/sis-penitenciario/src/app/components/home/home.component.html
@@ -35,7 +35,7 @@
                                     <li><a href="#"><span class="icon-group"></span></a></li>
                                 </ul>
                             </div>
-                            <div class="head-subtitle">WD Caviar Blue 1TB</div>                        
+                            <!-- <div class="head-subtitle">WD Caviar Blue 1TB</div>                         -->
                             <div class="head-panel nm tac" style="line-height: 0px;">
                                 <div class="knob">
                                     <div style="display: block; width: 100px; height: 100px;font-size: 100px;"><span class="icon-group"></span></div>
@@ -72,7 +72,7 @@
                 <div class="col-md-6">
                     <div class="block block-drop-shadow">                    
                         <div class="head bg-dot20">
-                            <h2>EStatística</h2>
+                            <h2>Estatística</h2>
                             <div class="side pull-right">               
                                 <ul class="buttons">                                
                                     <li><a href="#"><span class="icon-bar-chart"></span></a></li>
