--- a/sis-penitenciario/src/app/components/presidiario-list/presidiario-list.component.html
+++ b/sis-penitenciario/src/app/components/presidiario-list/presidiario-list.component.html
@@ -18,6 +18,8 @@
                                 <th>Nacionalidade</th>
                                 <th>T. Detencao</th>
                                 <th>Situacao presidiaria</th>
+                                <th></th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -29,6 +31,12 @@
                                 <td>Angolana</td>
                                 <td>2 Anos</td>
                                 <td>Condenado</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
                             <tr>
                                 <td>2</td>
@@ -38,6 +46,12 @@
                                 <td>Angolana</td>
                                 <td>3 Anos</td>
                                 <td>Liberdade Condicional</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
                             <tr>
                                 <td>3</td>
@@ -47,6 +61,12 @@
                                 <td>Angolana</td>
                                 <td>3 Anos</td>
                                 <td>Prisão Preventiva</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
                             <tr>
                                 <td>4</td>
@@ -56,6 +76,12 @@
                                 <td>Angolana</td>
                                 <td>1 Anos</td>
                                 <td>Prisão Preventiva</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
                             <tr>
                                 <td>5</td>
@@ -65,33 +91,43 @@
                                 <td>Angolana</td>
                                 <td>1 Anos</td>
                                 <td>Prisão Preventiva</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
-                            <tr>
-                                <td>6</td>
-                                <td>Sergio</td>
-                                <td>Amaral</td>
-                                <td>Divorciado</td>
-                                <td>Brasileiro</td>
-                                <td>6 Anos</td>
-                                <td>Detido</td>
-                            </tr>
+                            
                             <tr>
                                 <td>7</td>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>twitter</td>
-                                <td>Brasileiro</td>
-                                <td>6 Anos</td>
-                                <td>Detido</td>
+                                <td>Anísio</td>
+                                <td>Gomes</td>
+                                <td>Casado</td>
+                                <td>Congolês</td>
+                                <td>3 Anos</td>
+                                <td>Condenado</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
                             <tr>
                                 <td>8</td>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>twitter</td>
-                                <td>Brasileiro</td>
-                                <td>6 Anos</td>
+                                <td>Manzambi</td>
+                                <td>Kilola</td>
+                                <td>Solteiro</td>
+                                <td>Moçambicano</td>
+                                <td>2 Anos</td>
                                 <td>Detido</td>
+                                <th>
+                                    <button class="btn btn-info btn-block btn-base" routerLink="/presidiario-view"><i class="icon-edit"></i></button>
+                                </th>
+                                <th>
+                                    <button class="btn btn-danger btn-block btn-base"><i class="icon-trash"></i></button>
+                                </th>
                             </tr>
                         </tbody>
                     </table>                       
