--- a/sis-penitenciario/src/app/components/register-account/register-account.component.html
+++ b/sis-penitenciario/src/app/components/register-account/register-account.component.html
@@ -86,7 +86,7 @@
                 <div class="form-row">
                     <div class="col-md-12">
                         <div class="checkbox">
-                            <label><div class="checker"><span><input type="checkbox"></span></div> Concordo com os termos e condic
+                            <label><div class="checker"><span><input type="checkbox"></span></div> Concordo com os termos e condiç
                             ões</label>
                         </div>
                     </div>
