--- a/sis-penitenciario/src/app/components/main-layout/header/header.component.html
+++ b/sis-penitenciario/src/app/components/main-layout/header/header.component.html
@@ -6,7 +6,7 @@
                <span class="sr-only">Toggle navigation</span>
                <span class="icon-reorder"></span>                            
            </button>                                                
-           <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png"></a>                                                                                     
+           <a class="navbar-brand" href="index.html"><img src="assets/img/rsz_ccl.png"></a>                                                                                     
        </div>
        <div class="collapse navbar-collapse navbar-ex1-collapse">                                     
            <ul class="nav navbar-nav">
