--- a/sis-penitenciario/src/app/components/main-layout/sidebar/sidebar.component.html
+++ b/sis-penitenciario/src/app/components/main-layout/sidebar/sidebar.component.html
@@ -2,21 +2,13 @@
                 
     <div class="block block-drop-shadow">
         <div class="user bg-default bg-light-rtl">
-            <div class="info">                                                                                
-                <!--a href="#" class="informer informer-three">
-                    <span>14 / 255</span>
-                    Notificacoes
-                </a-->                            
-                <!--a href="#" class="informer informer-four">
-                    <span>$549.44</span>
-                    Balance
-                </a-->                                                        
+            <div class="info">                                                                                                                                       
                 <img src="assets/img/user.jpg" class="img-circle img-thumbnail">
             </div>
         </div>
         <div class="content list-group list-group-icons">
             <a href="#" class="list-group-item"><span class="icon-envelope"></span>Notificacoes<i class="icon-angle-right pull-right"></i></a>
-            <a href="#" class="list-group-item"><span class="icon-bar-chart"></span>EStatistica<i class="icon-angle-right pull-right"></i></a>
+            <a href="#" class="list-group-item"><span class="icon-bar-chart"></span>Estatística<i class="icon-angle-right pull-right"></i></a>
             <a href="#" class="list-group-item"><span class="icon-cogs"></span>Configuracoes<i class="icon-angle-right pull-right"></i></a>
             <a href="#" class="list-group-item"><span class="icon-off"></span>Sair<i class="icon-angle-right pull-right"></i></a>
         </div>
@@ -50,33 +42,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!--div class="block block-drop-shadow">
-        <div class="head bg-dot20">
-            <h2>Memory</h2>
-            <div class="side pull-right">               
-                <ul class="buttons">                                
-                    <li><a href="#"><span class="icon-cogs"></span></a></li>
-                </ul>
-            </div>
-            <div class="head-subtitle">Kingston 2x8Gb DDR3 1866MHz</div>                        
-            <div class="head-panel nm tac">
-                <div class="sparkline">                            
-                    <span sparktype="pie" sparkwidth="100" sparkheight="100"><canvas width="100" height="100" style="display: inline-block; width: 100px; height: 100px; vertical-align: top;"></canvas></span>
-                </div>                                                         
-            </div>
-            <div class="head-panel nm">
-                <div class="hp-info hp-simple pull-left hp-inline">
-                    <span class="hp-main"><span class="icon-circle"></span> Allocated 5079 Mb [ 31% ]</span>                                
-                </div>                 
-                <div class="hp-info hp-simple pull-left hp-inline">                                
-                    <span class="hp-main"><span class="icon-circle text-info"></span> In Cache 3768 Mb [ 23% ]</span>
-                </div>                            
-                <div class="hp-info hp-simple pull-left hp-inline">                                
-                    <span class="hp-main"><span class="icon-circle text-primary"></span> Aviable 7537 Mb [ 46% ]</span>
-                </div>                                                
-            </div>                        
-        </div>
-    </div-->
-                     
+    </div>                 
 </div>
